--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
@@ -1,43 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/contents_header_height_size"
     android:background="@color/contents_header_background"
-    android:gravity="center"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/contents_detail_back_key"
-        android:layout_width="@dimen/contents_back_key_size"
+    <ImageView
+        android:id="@+id/contents_detail_header_layout_back"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:clickable="true"
-        android:gravity="center"
+        android:contentDescription="@null"
         android:onClick="contentsDetailBackKey"
-        android:text="@string/back_key"
-        android:textColor="@color/white_text" />
+        android:scaleType="fitStart"
+        android:src="@mipmap/ic_keyboard_arrow_left_white_24dp"
+        android:visibility="invisible" />
 
     <TextView
-        android:id="@+id/header_layout_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:id="@+id/contents_detail_header_layout_title"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
         android:ellipsize="end"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:maxLines="1"
         android:textColor="@color/white_text"
         android:textSize="@dimen/header_title_text_size"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/contents_detailclose_key"
-        android:layout_width="@dimen/contents_close_key_size"
+    <LinearLayout
+        android:id="@+id/contents_detail_header_layout_contents_ll"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:clickable="true"
-        android:gravity="center"
-        android:onClick="contentsDetailCloseKey"
-        android:text="@string/close_key"
-        android:textColor="@color/white_text" />
+        android:layout_marginEnd="@dimen/contents_detail_10dp"
+        android:layout_weight="1"
+        android:gravity="end"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:contentDescription="@null"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_personal_video_white_24dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/contents_detail_10dp"
+            android:clickable="true"
+            android:contentDescription="@null"
+            android:onClick="contentsDetailCloseKey"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_clear_white_24dp" />
+    </LinearLayout>
 </LinearLayout>
