--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dtv_contents_detail_main_layout_ll"
     style="@style/default_layout_style"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <!-- コンテンツ詳細用のヘッダ を読み込む -->
-    <RelativeLayout
-        android:id="@+id/contents_detail_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <include layout="@layout/contents_detail_header_layout" />
-    </RelativeLayout>
-
-    <!--コンテンツ詳細のスクロール部分-->
+    <include layout="@layout/contents_detail_header_layout" />
     <ScrollView
         android:id="@+id/contents_detail_scroll_view"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/contents_detail_scroll_layout"
@@ -34,73 +26,66 @@
             <RelativeLayout
                 android:id="@+id/dtv_contents_detail_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:visibility="visible">
 
                 <!--サムネイル画像-->
                 <ImageView
-                    android:id="@+id/dtv_contents_detail_thumbnail"
+                    android:id="@+id/dtv_contents_detail_main_layout_thumbnail"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
+                    android:layout_height="wrap_content"
                     android:contentDescription="@string/contents_info_thumbnail_text"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/loading" />
+                    android:scaleType="fitCenter" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:orientation="vertical">
                     <!--中央ボタン画像-->
                     <ImageView
                         android:id="@+id/dtv_contents_view_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:alpha="0.5"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:contentDescription="@string/contents_info_thumbnail_button"
-                        android:src="@mipmap/ic_launcher" />
-
+                        android:src="@mipmap/ic_play_arrow_white_24dp" />
                     <!--テキスト-->
                     <TextView
                         android:id="@+id/view_contents_button_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:textColor="@color/white_text" />
+                        android:textColor="@color/white_text"
+                        android:visibility="gone" />
                 </LinearLayout>
+                <!--to do now on air -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/contents_provider_shape_corner"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
+                    android:text="@string/contents_detail_tv_now_on_air"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:visibility="gone"/>
             </RelativeLayout>
 
-            <HorizontalScrollView
-                android:id="@+id/contents_detail_tab_strip_scroll"
+            <LinearLayout
+                android:id="@+id/dtv_contents_detail_main_layout_tab"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/contents_detail_tabs_height"
-                android:layout_marginBottom="@dimen/contents_text_vertical_margin"
-                android:layout_marginTop="@dimen/contents_text_vertical_margin"
-                android:background="@android:color/background_dark"
-                android:fillViewport="true"
-                android:foregroundGravity="center_horizontal"
-                android:scrollbars="none" />
+                android:background="@drawable/rectangele_all"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" />
 
             <com.nttdocomo.android.tvterminalapp.view.ContentsDetailViewPager
-                android:id="@+id/contents_detail_result"
+                android:id="@+id/dtv_contents_detail_main_layout_vp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
-
-    <!--テレビで視聴するボタン用レイアウト-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom">
-
-        <Button
-            android:id="@+id/change_remote_controller_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="remoteControlButton"
-            android:text="@string/remote_control_start" />
-    </RelativeLayout>
 </LinearLayout>
