--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -21,7 +21,7 @@
     <dimen name="launch_device_list_layout_high">0dp</dimen>
 
     <!--Common-->
-    <dimen name="header_title_text_size">17sp</dimen>
+    <dimen name="header_title_text_size">16dp</dimen>
     <dimen name="list_item_title_text_size">15sp</dimen>
     <dimen name="list_item_time_text_size">11sp</dimen>
     <dimen name="list_item_rank_num_text_size">10sp</dimen>
@@ -47,14 +47,20 @@
     <dimen name="contents_close_key_size">50sp</dimen>
     <dimen name="contents_key_padding_size">12dp</dimen>
     <dimen name="contents_view_text_margin">10dp</dimen>
-    <dimen name="contents_tab_side_margin">20dp</dimen>
+    <dimen name="contents_tab_side_margin">15dp</dimen>
     <dimen name="contents_tab_top_margin">0dp</dimen>
     <dimen name="contents_tab_height">50dp</dimen>
-    <dimen name="contents_service_name_side_margin">10dp</dimen>
+    <dimen name="contents_service_name_side_margin">5dp</dimen>
     <dimen name="contents_text_vertical_margin">10dp</dimen>
+    <dimen name="contents_text_info_margin">15dp</dimen>
     <dimen name="view_button_size">80dp</dimen>
-    <dimen name="contents_detail_tabs_height">30dp</dimen>
+    <dimen name="contents_detail_tabs_height">40dp</dimen>
     <dimen name="tab_under_indicator">1.5dp</dimen>
+    <dimen name="contents_detail_2dp">2dp</dimen>
+    <dimen name="contents_detail_5dp">5dp</dimen>
+    <dimen name="contents_detail_8dp">8dp</dimen>
+    <dimen name="contents_detail_10dp">10dp</dimen>
+    <dimen name="contents_detail_16dp">16dp</dimen>
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">15dp</dimen>
