--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
@@ -6,82 +7,110 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
-    app:visibility_height="100dp"
     android:id="@+id/watch_by_tv_relative_layout"
     >
     <com.nttdocomo.android.tvterminalapp.view.RemoteControllerView
         android:id="@+id/msv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@android:color/transparent"
-        >
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent">
+
         <LinearLayout
             android:id="@+id/linear_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="359dp"
+            android:layout_height="641dp"
             android:orientation="vertical"
             android:background="@android:color/transparent"
-            >
-            <RelativeLayout
-                android:id="@+id/header_watch_by_tv"
+            android:weightSum="641">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_weight="1.0"
-                android:layout_height="0dp"
-                android:background="@drawable/remote_watch_by_tv_bottom_corner">
-                <LinearLayout
+                android:layout_height="80dp"
+                android:layout_weight="80"
+                android:orientation="vertical">
+
+                <FrameLayout
+                    android:id="@+id/header_watch_by_tv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <View
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"/>
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="3"
-                        android:src="@mipmap/ic_launcher"
-                        android:layout_marginLeft="20dp"
-                        android:visibility="gone"
-                        android:background="@drawable/color_little_gray"
-                        android:gravity="center_vertical|start"
-                        android:id="@+id/remote_controller_iv_power"/>
-                    <View
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"/>
-                </LinearLayout>
+                    android:background="@drawable/remote_watch_by_tv_bottom_corner">
 
-                <TextView
-                    android:id="@+id/watch_by_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
-                    android:text="@string/remote_controller_viewpager_watch_by_tv"
-                    android:gravity="center"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_gravity="end"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="10dp"
-                    android:src="@drawable/remote_controller_down"
-                    android:id="@+id/remote_controller_down"
-                    />
-            </RelativeLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:weightSum="641">
+
+                        <View
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="16" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:weightSum="359">
+
+                            <View
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="16" />
+
+                            <ImageButton
+                                android:id="@+id/remote_controller_iv_power"
+                                android:layout_width="wrap_content"
+                                android:layout_height="0dp"
+                                android:layout_marginLeft="20dp"
+                                android:layout_weight="48"
+                                android:background="@drawable/color_little_gray"
+                                android:gravity="center_vertical|start"
+                                android:src="@mipmap/ic_launcher"
+                                android:visibility="gone" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="489dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:layout_marginLeft="10dp"
+                            android:src="@mipmap/ic_remote_tv_play" />
+
+                        <TextView
+                            android:id="@+id/watch_by_tv"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:text="@string/remote_controller_viewpager_watch_by_tv"
+                            android:textColor="#ffffff"
+                            android:textSize="14dp" />
+
+                        <ImageView
+                            android:id="@+id/remote_controller_down"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:layout_gravity="right"
+                            android:layout_marginRight="10dp"
+                            android:src="@drawable/remote_controller_down" />
+                    </LinearLayout>
+                </FrameLayout>
+            </LinearLayout>
+
             <android.support.v4.view.ViewPager
-                android:layout_weight="8"
                 android:id="@+id/remokon_viewpager"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:visibility="visible"/>
+                android:layout_height="561dp"
+                android:visibility="visible"
+                android:layout_weight="561"/>
         </LinearLayout>
-
     </com.nttdocomo.android.tvterminalapp.view.RemoteControllerView>
 
 </RelativeLayout>
