--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:id="@+id/watch_by_tv_relative_layout"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <com.nttdocomo.android.tvterminalapp.view.RemoteControllerView
         android:id="@+id/msv"
         android:layout_width="match_parent"
@@ -22,8 +20,8 @@
             android:id="@+id/linear_layout"
             android:layout_width="359dp"
             android:layout_height="641dp"
-            android:orientation="vertical"
             android:background="@android:color/transparent"
+            android:orientation="vertical"
             android:weightSum="641">
 
             <LinearLayout
@@ -39,14 +37,51 @@
                     android:background="@drawable/remote_watch_by_tv_bottom_corner">
 
                     <LinearLayout
+                        android:id="@+id/bottom_view_ll"
+                        android:layout_width="match_parent"
+                        android:layout_height="489dp"
+                        android:orientation="horizontal"
+                        android:visibility="visible"
+                        android:weightSum="1">
+
+                        <ImageView
+                            android:id="@+id/remote_tv_play_icon"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginStart="13dp"
+                            android:layout_marginTop="17dp"
+                            android:src="@mipmap/ic_remote_tv_play" />
+
+                        <TextView
+                            android:id="@+id/watch_by_tv"
+                            android:layout_width="122dp"
+                            android:layout_height="484dp"
+                            android:layout_marginLeft="13dp"
+                            android:layout_marginTop="20dp"
+                            android:text="@string/remote_controller_viewpager_watch_by_tv"
+                            android:textColor="#ffffff"
+                            android:textSize="14dp" />
+
+                        <ImageView
+                            android:id="@+id/remote_controller_down"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_marginStart="125dp"
+                            android:layout_marginTop="17.5dp"
+                            android:src="@drawable/down" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/top_view_ll"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
+                        android:visibility="gone"
                         android:weightSum="641">
 
                         <View
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="0dp"
                             android:layout_weight="16" />
 
                         <LinearLayout
@@ -56,51 +91,34 @@
                             android:weightSum="359">
 
                             <View
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
                                 android:layout_weight="16" />
 
                             <ImageButton
                                 android:id="@+id/remote_controller_iv_power"
-                                android:layout_width="wrap_content"
-                                android:layout_height="0dp"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
                                 android:layout_marginLeft="20dp"
+                                android:layout_marginTop="17dp"
                                 android:layout_weight="48"
                                 android:background="@drawable/color_little_gray"
-                                android:gravity="center_vertical|start"
-                                android:src="@mipmap/ic_launcher"
-                                android:visibility="gone" />
+                                android:src="@drawable/power" />
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_weight="245" />
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="25"
+                                android:src="@drawable/down" />
                         </LinearLayout>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="489dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_marginLeft="10dp"
-                            android:src="@mipmap/ic_remote_tv_play" />
-
-                        <TextView
-                            android:id="@+id/watch_by_tv"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="10dp"
-                            android:text="@string/remote_controller_viewpager_watch_by_tv"
-                            android:textColor="#ffffff"
-                            android:textSize="14dp" />
-
-                        <ImageView
-                            android:id="@+id/remote_controller_down"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_gravity="right"
-                            android:layout_marginRight="10dp"
-                            android:src="@drawable/remote_controller_down" />
-                    </LinearLayout>
                 </FrameLayout>
             </LinearLayout>
 
@@ -108,8 +126,8 @@
                 android:id="@+id/remokon_viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="561dp"
-                android:visibility="visible"
-                android:layout_weight="561"/>
+                android:layout_weight="561"
+                android:visibility="visible" />
         </LinearLayout>
     </com.nttdocomo.android.tvterminalapp.view.RemoteControllerView>
 
