[実装]([DREM-31]リモコンエミュレート)実装(UI）
リモコンUI修正とペアリングアイコンからリモコンUI画面を表示させる処理追加

Change-Id: I73867753695631b16f47334e55266a9b23545bf5

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -18,7 +18,7 @@
         android:id="@+id/remote_controller_rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:gravity="center_horizontal|bottom">
 
         <include
             android:id="@+id/base_remote_controller"
