--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent">
 
     <com.nttdocomo.android.tvterminalapp.view.RemoteControllerView
-        android:id="@+id/msv"
+        android:id="@+id/remote_control_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
@@ -121,13 +121,12 @@
 
                 </FrameLayout>
             </LinearLayout>
-
             <android.support.v4.view.ViewPager
                 android:id="@+id/remokon_viewpager"
                 android:layout_width="match_parent"
-                android:layout_height="561dp"
-                android:layout_weight="561"
-                android:visibility="visible" />
+                android:layout_height="0dp"
+                android:visibility="visible"
+                android:layout_weight="561"/>
         </LinearLayout>
     </com.nttdocomo.android.tvterminalapp.view.RemoteControllerView>
 
