--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controller_player_ui_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controller_player_ui_layout.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E5E5E5">
+    android:background="@drawable/remote_viewpager_bottom_corner">
 
     <LinearLayout
         android:layout_width="match_parent"
