--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -10,6 +10,7 @@
 
     <!-- コンテンツ詳細用のヘッダ を読み込む -->
     <include layout="@layout/contents_detail_header_layout" />
+
     <ScrollView
         android:id="@+id/contents_detail_scroll_view"
         android:layout_width="match_parent"
@@ -29,15 +30,26 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible">
 
-                <!--サムネイル画像-->
+                <RelativeLayout
+                    android:id="@+id/dtv_contents_detail_main_layout_player_rl"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.digion.dixim.android.secureplayer.SecureVideoView
+                        android:id="@+id/dtv_contents_detail_main_layout_player_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </RelativeLayout>
+
                 <ImageView
                     android:id="@+id/dtv_contents_detail_main_layout_thumbnail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:contentDescription="@string/contents_info_thumbnail_text"
                     android:scaleType="fitCenter" />
 
                 <LinearLayout
+                    android:id="@+id/dtv_contents_detail_main_layout_thumbnail_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -58,20 +70,6 @@
                         android:textColor="@color/white_text"
                         android:visibility="gone" />
                 </LinearLayout>
-                <!--to do now on air -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/contents_provider_shape_corner"
-                    android:paddingEnd="5dp"
-                    android:paddingStart="5dp"
-                    android:text="@string/contents_detail_tv_now_on_air"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    android:visibility="gone"/>
             </RelativeLayout>
 
             <LinearLayout
