--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
@@ -10,7 +10,7 @@
 	<RelativeLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_marginBottom="10dp"
+		android:layout_marginStart="7dp"
 		android:layout_marginTop="10dp">
 
 		<ImageView
@@ -18,20 +18,49 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_centerVertical="true"
-			android:layout_marginLeft="10dp"
-			android:background="@mipmap/channel_list_loading"/>
+			android:scaleType="fitXY"
+			android:visibility="gone"/>
+
+		<ImageView
+			android:id="@+id/channel_list_item_channel_name_standard"
+			android:layout_width="1dp"
+			android:layout_height="40dp"
+			android:layout_centerVertical="true"
+			android:background="@android:color/transparent"
+			android:scaleType="fitXY"/>
 
 		<TextView
 			android:id="@+id/channel_list_item_title_tv"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_alignBottom="@id/channel_list_item_thumb_iv"
+			android:layout_alignTop="@id/channel_list_item_thumb_iv"
 			android:layout_centerVertical="true"
+			android:layout_marginEnd="16dp"
 			android:layout_marginStart="10dp"
 			android:layout_toEndOf="@id/channel_list_item_thumb_iv"
-			android:text="FOX HD"
+			android:ellipsize="end"
+			android:gravity="center_vertical"
+			android:maxLines="1"
+			android:paddingLeft="6dp"
 			android:textColor="@android:color/white"
-			android:textSize="16dp"/>
+			android:textSize="15dp"/>
+
+		<View
+			android:id="@+id/channel_list_item_space_view"
+			android:layout_width="wrap_content"
+			android:layout_height="10dp"
+			android:layout_below="@id/channel_list_item_channel_name_standard"
+			android:layout_toEndOf="@id/channel_list_item_thumb_iv"
+			android:background="@android:color/transparent"/>
+
+		<View
+			android:id="@+id/channel_list_item_line"
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:layout_alignStart="@id/channel_list_item_title_tv"
+			android:layout_below="@id/channel_list_item_space_view"
+			android:background="@color/list_view_divider"/>
 
 	</RelativeLayout>
-
 </RelativeLayout>
