--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_content.xml
@@ -10,8 +10,6 @@
 	<ListView
 		android:id="@+id/channel_list_content_body_lv"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:divider="@drawable/channel_list_item_divider"
-		android:dividerHeight="1dp"/>
+		android:layout_height="match_parent"/>
 
 </RelativeLayout>
