--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -54,4 +54,7 @@
     <drawable name="color_white">#ffffff</drawable>
     <drawable name="color_black">#000000</drawable>
     <drawable name="color_gray">#555555</drawable>
+
+    <!--//チャンネルリスト-->
+    <color name="list_view_divider">#e0777777</color>
 </resources>
