--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -16,9 +16,10 @@
 
     <RelativeLayout
         android:id="@+id/remote_controller_rl"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal|bottom">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true">
 
         <include
             android:id="@+id/base_remote_controller"
